# iterative_methods

./: CoqMakefile.local  LICENSE  Makefile  README.md  _CoqProject  bound_on_x.v  bridge_does_not_fall_down_theorem.v  coq-iterative-methods.opam  diag_invertibility.v  dot_prod_defn.v  error_real.v  finite_lemmas_additional.v  float_acc_lems.v  float_model.v  float_model_generic.v  floatlib.v  fma_dot_mat_model.v  fma_floating_point_model.v  fma_jacobi_forward_error.v  fma_jacobi_forward_error_sparse.v  fma_matrix_inverse_error.v  fma_matrix_vec_mult.v  fma_real_func_model.v  func_model_equiv.v  generalize.v  global_float_error.v  inf_norm_properties.v  infinity_norm_properties.v  iter_theorem.v  jacob_iter.v  jacob_list_fun_model.v  jacobi_iteration_bound.v  jacobi_preconditions.v  jacobi_s.c  lemmas.v  local_float_error.v  matrix_ex.txt  matrix_matrix_mult_bound.v  matrix_vec_mult_bound.v  model_mat_lemmas.v  (+6 more)
SC_workshop/: global_float_error.v  specific_matrix_lemmas.v  vcfloat_lemmas.v
StationaryMethods/: Makefile  _CoqProject  common.v  dot_acc.v  dotprod_model.v  float_acc_lems.v  fma_dot_acc.v  fma_is_finite.v  list_lemmas.v  op_defs.v  sum_acc.v  sum_model.v
cholesky/: LA_SDP.v  Makefile  Makefile.coq.local  _CoqProject  cholesky.c  cholesky_equiv.v  cholesky_model.v  cholesky_real.v  error_analysis.v  spec_cholesky.v  verif_cholesky.v
emprical_results/: kmin.cpp  kmin_compute.jl
naive_dot_product/: dot_prod_defn.v  iter_theorem.v  matrix_vec_mult_bound.v  real_func_model_generic.v  summation.v
pde/: build_csr.c  triangulation.c
sparse/: CoqMakefile.local  (+39 more)
