opam-version: "2.0"
synopsis: "Iterative_methods: Proofs about Jacobi iteration and related linear solvers"
description: """
Proofs of correctness, accuracy, and convergence 
"""
authors: [
  "Mohit Tekriwal"
  "Jean-Baptiste Jeannin"
  "Andrew W. Appel"
  "Ariel E. Kellison"
  "Yichen Tao"
]
homepage: "https://github.com/VeriNum/iterative_methods"
maintainer: "Andrew W. Appel, if he's in the mood"
dev-repo: "git+https://github.com/VeriNum/iterative_methods"
bug-reports: "https://github.com/VeriNum/iterative_methods/issues"
license: "MIT"

build: [
  [ make "-j%{jobs}%" ]
]
install: [
  [ make "-j%{jobs}%" "install" ]
]
depends: [
  "coq" {>= "8.19"}
  "coq-flocq"
  "coq-interval"
  "coq-vcfloat" {>= "2.3~"}
  "coq-mathcomp-ssreflect" {>= "2.3.0~"}
  "coq-mathcomp-algebra" {>= "2.3.0~"}
  "coq-mathcomp-analysis"
  "coq-mathcomp-algebra-tactics"
  "coq-mathcomp-finmap"
  "coq-mathcomp-reals-stdlib" {>= "1.8.0"}
  "coq-vst" {>= "2.15~"}
  "coq-vst-lib" {>= "2.15.1~"}
  "coq-laproof"
]
tags: [
  "logpath:iterative_methods"
]
